Use deepObject serialization for objects in query
