# _examples/advanced/router.go
@@ -53,6 +53,8 @@ func NewRouter() http.Handler {
 		return nil
 	})
 
+	r.Method(http.MethodGet, "/query-object", nethttp.NewHandler(queryObject()))
+
 	r.Method(http.MethodPost, "/file-upload", nethttp.NewHandler(fileUploader()))
 	r.Method(http.MethodPost, "/json-body/{in-path}", nethttp.NewHandler(jsonBody()))
 	r.Method(http.MethodPost, "/json-body-validation/{in-path}", nethttp.NewHandler(jsonBodyValidation()))
